<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true">

                <FrameLayout
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="30dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/orange_bc_color"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="50dp"
                                android:layout_marginTop="50dp"
                                android:text="@string/register"
                                android:textColor="#fff"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel">

                                    <EditText
                                        android:id="@+id/txtName"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/Username"
                                        android:inputType="textPersonName"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel">

                                    <EditText
                                        android:id="@+id/txtMobile"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/mobile"
                                        android:inputType="phone"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:maxLength="10"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:orientation="horizontal"
                                android:paddingStart="50dp"
                                android:layout_marginTop="10dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel"
                                    app:passwordToggleEnabled="true"
                                    app:passwordToggleTint="@color/white_color">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/txtPasword"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/Password"
                                        android:inputType="textPassword"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:orientation="horizontal"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel"
                                    app:passwordToggleEnabled="true"
                                    app:passwordToggleTint="@color/white_color">

                                    <EditText
                                        android:id="@+id/txtRepeatPass"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/repeat_password"
                                        android:inputType="textPassword"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel">

                                    <EditText
                                        android:id="@+id/txtComName"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/com_name"
                                        android:inputType="textPersonName"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel">

                                    <EditText
                                        android:id="@+id/txtEmail"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/email_id"
                                        android:inputType="textEmailAddress"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel">

                                    <EditText
                                        android:id="@+id/txtGst"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/gst"
                                        android:maxLength="15"
                                        android:inputType="textCapCharacters"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel">

                                    <EditText
                                        android:id="@+id/txtAddress"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/address"
                                        android:inputType="textPersonName"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />

                                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                                        android:id="@+id/fab"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerHorizontal="true"
                                        android:layout_gravity="center_horizontal|top"
                                        android:src="@drawable/plus_x"
                                        android:transitionName="loginFab"
                                        app:fabSize="normal" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="10dp"
                                android:paddingStart="50dp"
                                android:paddingEnd="30dp">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="#f0f7f4"
                                    android:theme="@style/TextLabel">

                                    <EditText
                                        android:id="@+id/txtCity"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/selector_bg_edit_2"
                                        android:hint="@string/city"
                                        android:inputType="textPersonName"
                                        android:paddingBottom="2dp"
                                        android:textColor="#f0f7f4"
                                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                                        android:textSize="16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>


                            <Button
                                android:id="@+id/bt_go"
                                android:layout_width="150dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="20dp"
                                android:background="@drawable/bt_shape_2"
                                android:stateListAnimator="@drawable/state_list_animator_z"
                                android:text="@string/next"
                                android:textColor="#2fa881"></Button>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </FrameLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

        <include
            android:id="@+id/loading_view"
            layout="@layout/layout_loader"
            android:visibility="gone"/>

    </FrameLayout>
</layout>
