<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange_bc_color">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="30dp"
                            android:text="@string/change_passowrd"
                            android:textColor="#FFCC00"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#c5c5c5"
                            app:passwordToggleEnabled="true"
                            android:background="@null"
                            android:hint="@null"
                            android:layout_centerInParent="true"
                            app:hintEnabled="false"
                            app:passwordToggleTint="@color/orange_bc_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_old_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/old_assword"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#c5c5c5"
                            app:passwordToggleEnabled="true"
                            android:background="@null"
                            android:hint="@null"
                            android:layout_centerInParent="true"
                            app:hintEnabled="false"
                            app:passwordToggleTint="@color/orange_bc_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_new_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/new_password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:paddingStart="50dp"
                        android:paddingEnd="30dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#c5c5c5"
                            app:passwordToggleEnabled="true"
                            android:background="@null"
                            android:hint="@null"
                            android:layout_centerInParent="true"
                            app:hintEnabled="false"
                            app:passwordToggleTint="@color/orange_bc_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:hint="@string/conf_password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/bt_submit"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bt_shape"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:text="@string/submit"

                            android:textColor="@color/colorPrimary"></Button>
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </RelativeLayout>

        <include
            android:id="@+id/loading_view"
            layout="@layout/layout_loader"
            android:visibility="gone"/>

    </FrameLayout>

</layout>